--- a/ClientRegistry/ClientRegistry/appsettings.json
+++ b/ClientRegistry/ClientRegistry/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=teste;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=teste;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
