Modificado todas as variaveis

--- a/ClientRegistry/ClientRegistry.API.Test/CustomerRegistry.API.Test.csproj
+++ b/ClientRegistry/ClientRegistry.API.Test/CustomerRegistry.API.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClientRegistry\ClientRegistry.API.csproj" />
+    <ProjectReference Include="..\ClientRegistry\CustomerRegistry.API.csproj" />
   </ItemGroup>
 
 </Project>
