--- a/ClientRegistry/Client.DBO/Customer.DBO.csproj
+++ b/ClientRegistry/Client.DBO/Customer.DBO.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Client.Common.csproj" />
+    <ProjectReference Include="..\Common\Customer.Common.csproj" />
   </ItemGroup>
 
 </Project>
