--- a/ClientRegistry/ClientRegistry/appsettings.json
+++ b/ClientRegistry/ClientRegistry/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=teste;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=127.0.0.1:1433;Database=teste;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
