--- a/ClientRegistry/launchSettings.json
+++ b/ClientRegistry/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "clientregistry.api": "StartDebugging"
+        "customerregistry.api": "StartDebugging"
       }
     }
   }
