Arrumando path sln

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,7 +56,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: ClientRegistry.sln
+      Solution_Name: ClientRegistry
       Test_Project_Path: ClientRegistry\ClientRegistry.API.Test\CustomerRegistry.API.Test.csproj
     steps:
     - name: Checkout
