--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,7 +56,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: ClientRegistry
+      Solution_Name: ClientRegistry.sln
       Test_Project_Path: ClientRegistry\ClientRegistry.API.Test\CustomerRegistry.API.Test.csproj
     steps:
     - name: Checkout
@@ -76,7 +76,7 @@ jobs:
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test
+      run: dotnet test $env:Solution_Name.sln --configuration ${{ matrix.configuration }} 
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
