--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -76,14 +76,18 @@ jobs:
 
     # Execute all unit tests in the solution
     - name: Execute unit tests
-      run: dotnet test $env:Solution_Name.sln --configuration ${{ matrix.configuration }} 
+      run: dotnet test $env:Solution_Name --configuration ${{ matrix.configuration }}
+      env:
+        Solution_Name: ClientRegistry.sln
+      working-directory: ${{ github.workspace }}/ClientRegistry
 
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       env:
         Configuration: ${{ matrix.configuration }}
-      working-directory: ${{ github.workspace }}
+        Solution_Name: ClientRegistry.sln
+      working-directory: ${{ github.workspace }}/ClientRegistry
 
     # Decode the base 64 encoded pfx and save the Signing_Certificate
     - name: Decode the pfx
